--- a/src/main.css
+++ b/src/main.css
@@ -48,6 +48,10 @@
  * main.css
  */
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background: #E53035; /*#AF0A18*/
   color: #000;
@@ -73,25 +77,87 @@ body {
 }
 .poster {
   position: relative;
+  padding: 0.75em;
+}
+.poster__inner {
+  position: relative;
   background: #000;
   color: #E53035;
   overflow: hidden;
   padding: 0;
   border: 0.25em solid #000;
   border-radius: 0.5em;
-  margin: 0 1em 0 1em;
+  /*margin: 0 1em 0 1em;*/
 }
 .poster__img {
   width: 100%;
 }
 .poster__title {
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .poster__play {
   position: absolute;
+  /*display: none;*/
+  opacity: 0;
   top: 50%;
   left: 50%;
-  font-size: 2em;
+  font-size: 2.5em;
+  cursor: pointer;
+  margin: -1.25em 0 0 -1.25em;
+  -webkit-transition: opacity 0.2s;
+}
+.poster__info {
+  position: absolute;
+  /*display: none;*/
+  opacity: 0;
+  bottom: 8em;
+  right: 1em;
+  font-size: 1em;
+  cursor: pointer;
+  -webkit-transition: opacity 0.2s;
+}
+.poster:hover .poster__play, .poster:hover .poster__info {
+  /*display: block;*/
+  opacity: 1;
+  -webkit-transition: opacity 0.5s;
+}
+
+.modal {
+  position: fixed;
+  background: #000;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: #E53035;
+}
+.modal--inv {
+  background: #E53035;
+  color: #000;
+}
+.modal:target {
+  display: table;
+}
+.modal__trailer, .modal__info {
+  width: 100%;
+  height: 100%;
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+.modal__info {
+  padding: 2em;
+}
+.modal__close {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  font-size: 2.5em;
+  cursor: pointer;
 }
 
 .button {
@@ -156,4 +222,13 @@ h6 {
   font-size: 1.28rem;
   letter-spacing: 0;
   line-height: 1.4;
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
+}
+
+a:focus, a:hover {
+  color: #fff;
 }
