--- a/src/main.css
+++ b/src/main.css
@@ -70,6 +70,18 @@ body {
   margin: 0 auto;
 }
 
+.tmdb-logo {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 6em;
+}
+
+.tail {
+  text-align: center;
+  margin: 1em 0;
+}
+
 .posters {
   width: 75%;
   padding: 2em;
@@ -177,6 +189,7 @@ body {
 
 /*
  * Typography
+ * Courtesy of https://github.com/milligram/milligram/blob/master/dist/milligram.css
  */
 
 h1,
